# cpp-template-simple

./: .gitignore  CMakeLists.txt  README.md  compile_commands 2.json  tasks.py
lib/: CmakeLists.txt
src/: CMakeLists.txt  hello.cpp  main.cpp  problem5.cpp  treasure.cpp
test/: CMakeLists.txt  hello_test.cpp  treasure_tests.cpp
